--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ body {
 .main .blog .contenedor .articulo-blog .articulo .botom a:hover {
     background: #7d7d7d;
     color: #fff;
+    text-decoration: none;
 }
 
 /* Aqui inicio a trabajar el aside */
